# yui

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile.toml  README.md  apm.lock.yaml  apm.yml  renovate.json  renri.toml
.gemini/skills/renri/: SKILL.md
.github/workflows/: ci.yml  release.yml
assets/alt/: README.md
src/: absorb.rs  backup.rs  cli.rs  cmd.rs  config.rs  error.rs  git.rs  hook.rs  icons.rs  lib.rs  link.rs  main.rs  marker.rs  mount.rs  paths.rs  render.rs  secret.rs  status.rs  template.rs  vars.rs  vault.rs
