[package]
name = "yui-cli"
version = "0.7.1"
edition = "2024"
rust-version = "1.85"
description = "Target-as-truth dotfiles manager: edit your live configs, source repo updates automatically via hardlink/junction/symlink."
authors = ["yukimemi"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yukimemi/yui"
homepage = "https://github.com/yukimemi/yui"
keywords = ["dotfiles", "config", "symlink", "hardlink", "junction"]
categories = ["command-line-utilities", "config"]
include = [
    "src/**/*.rs",
    "assets/icon.svg",
    "assets/logo.svg",
    "assets/logo-dark.svg",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[[bin]]
name = "yui"
path = "src/main.rs"

[lib]
name = "yui"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
camino = { version = "1.2.2", features = ["serde1"] }
clap = { version = "4", features = ["derive", "env"] }
globset = "0.4.18"
ignore = "0.4.25"
indicatif = "0.17"
jiff = { version = "0.2.24", features = ["serde"] }
owo-colors = "4"
same-file = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
similar = "2"
tera = "1"
thiserror = "2"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
whoami = "1"

[target.'cfg(windows)'.dependencies]
junction = "1.4.2"

[dev-dependencies]
assert_cmd = "2.2.1"
assert_fs = "1.1.3"
predicates = "3.1.4"
tempfile = "3.27.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
